Fixes .page visible issue

--- a/style/style.css
+++ b/style/style.css
@@ -465,7 +465,6 @@
 		position: absolute;
 		display:none;
 		width: 100%;
-		height: 100vh;
 		background: white;
 		top: 0;
 		left: 0;
